--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -84,7 +84,8 @@
         android:id="@+id/ivProfile"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:src="@drawable/qwdqwd"
+        android:src="@drawable/iv_people"
+        android:backgroundTint="#E9E9E9"
         android:background="@drawable/bg_round"
         android:scaleType="centerCrop"
         android:clipToOutline="true"
