--- a/app/src/main/res/layout/fragment_agree_page.xml
+++ b/app/src/main/res/layout/fragment_agree_page.xml
@@ -111,7 +111,7 @@
         android:layout_marginStart="20dp"
         android:button="@drawable/bg_checkbox_selector"
         android:padding="8dp"
-        android:text="개인정보 수집 및 이용 동(필수)"
+        android:text="개인정보 수집 및 이용 동의(필수)"
         android:fontFamily="@font/lato_regular"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -187,6 +187,7 @@
         android:id="@+id/ivCb4"
         android:layout_width="70dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         android:layout_marginEnd="20dp"
         app:layout_constraintTop_toTopOf="@id/cb4"
         app:layout_constraintBottom_toBottomOf="@id/cb4"
