--- a/app/src/main/res/layout/fragment_charge.xml
+++ b/app/src/main/res/layout/fragment_charge.xml
@@ -25,10 +25,11 @@
             android:layout_gravity="top"
             android:src="@drawable/icon_cancel2"/>
         <TextView
+            android:id="@+id/tvTicket"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="교환권 10장"
+            android:text="낙엽 10장"
             android:textStyle="bold"
             android:fontFamily="@font/lato_regular"
             android:textSize="32sp"
@@ -40,7 +41,7 @@
         android:id="@+id/iv1"
         android:layout_width="24dp"
         android:layout_height="22dp"
-        android:src="@drawable/icon_charge5"
+        android:src="@drawable/icon_leaves"
         android:layout_marginTop="20dp"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
@@ -48,7 +49,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="교환권 3장"
+        android:text="낙엽 3장"
         android:fontFamily="@font/lato_regular"
         android:textSize="20sp"
         android:textColor="@color/black"
@@ -73,7 +74,7 @@
         android:id="@+id/iv2"
         android:layout_width="24dp"
         android:layout_height="22dp"
-        android:src="@drawable/icon_charge5"
+        android:src="@drawable/icon_leaves"
         android:layout_marginTop="36dp"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toBottomOf="@id/iv1"
@@ -81,7 +82,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="교환권 5장"
+        android:text="낙엽 5장"
         android:fontFamily="@font/lato_regular"
         android:textSize="20sp"
         android:textColor="@color/black"
@@ -107,7 +108,7 @@
         android:id="@+id/iv3"
         android:layout_width="24dp"
         android:layout_height="22dp"
-        android:src="@drawable/icon_charge5"
+        android:src="@drawable/icon_leaves"
         android:layout_marginTop="36dp"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toBottomOf="@id/iv2"
@@ -115,7 +116,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="교환권 7장"
+        android:text="낙엽 7장"
         android:fontFamily="@font/lato_regular"
         android:textSize="20sp"
         android:textColor="@color/black"
@@ -141,7 +142,7 @@
         android:id="@+id/iv4"
         android:layout_width="24dp"
         android:layout_height="22dp"
-        android:src="@drawable/icon_charge5"
+        android:src="@drawable/icon_leaves"
         android:layout_marginTop="36dp"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toBottomOf="@id/iv3"
@@ -149,7 +150,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="교환권 10장"
+        android:text="낙엽 10장"
         android:fontFamily="@font/lato_regular"
         android:textSize="20sp"
         android:textColor="@color/black"
