--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -34,7 +34,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="22dp"
-                android:src="@drawable/icon_charge5"
+                android:src="@drawable/icon_leaves"
                 app:layout_constraintTop_toTopOf="@id/btnMoney"
                 app:layout_constraintBottom_toBottomOf="@id/btnMoney"
                 app:layout_constraintEnd_toStartOf="@id/btnMoney"
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:background="@drawable/bg_no_767676_30"
-                tools:text="10권"
+                tools:text="10장"
                 android:gravity="center"
                 android:paddingStart="20dp"
                 android:paddingEnd="10dp"
@@ -411,6 +411,34 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="회원 탈퇴"
+                android:fontFamily="@font/lato_regular"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/icon_right"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl7"
+            android:layout_width="0dp"
+            android:layout_height="54dp"
+            android:layout_marginHorizontal="20dp"
+            app:layout_constraintTop_toBottomOf="@id/cl6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/txtLogout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="로그아웃"
                 android:fontFamily="@font/lato_regular"
                 android:textSize="16sp"
                 android:textColor="@color/black"
